objects/ssot__GeoDemographicDistribution__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AgeRange__c</fullName>
        <label>Age Range</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AggregrationType__c</fullName>
        <label>Aggregation Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EducationLevelPercentage__c</fullName>
        <label>Education Level Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EducationLevel__c</fullName>
        <label>Education Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentPercentage__c</fullName>
        <label>Employment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EthnicityPercentage__c</fullName>
        <label>Ethnicity Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Geo Demographic Distribution Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedianHouseholdIncomeAmount__c</fullName>
        <label>Median Household Income</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MedianIndividualIncomeAmount__c</fullName>
        <label>Median Individual Income</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PopulationCount__c</fullName>
        <label>Population Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>